--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,24 @@
 <resources>
   <string name="app_name">BlueToothTerminalApp</string>
+  <string name="enable_bluetooth_button_text">Enable Bluetooth</string>
+  <string name="allow_location_button_text">Allow</string>
+  <string name="bluetooth_permission_not_found_title">Bluetooth Permission Not granted</string>
+  <string name="bluetooth_permission_not_found_desc">App required bluetooth scan and connect permissions</string>
+  <string name="bluetooth_permission_not_found">No Bluetooth Permission</string>
+  <string name="bluetooth_not_enable_title">Bluetooth Not Enabled</string>
+  <string name="bluetooth_not_enable_desc">Seems bluetooth is not turned on, bluetooth funtionaly is required please turn it on</string>
+  <string name="bluetooth_not_enable">Bluetooth Not enabled</string>
+  <string name="settings_tooltip_text">Settings</string>
+  <string name="permission_settings">Permission Settings</string>
+  <string name="bluetooth_settings">Bluetooth</string>
+  <string name="location_perms_title">Location permission Required</string>
+  <string name="location_perms_desc">Bluetooth cannot scan for device if no location permission is granted</string>
+  <string name="start_bluetooth_scan">Start Scan</string>
+  <string name="stop_bluetooth_scan">Stop Scan</string>
+  <string name="paired_device">Paired Devices</string>
+  <string name="paired_device_desc">These devices are already paired to this device</string>
+  <string name="paired_device_not_found">No paired Devices found</string>
+  <string name="available_scan_devices">Available Devices</string>
+  <string name="available_scan_devices_desc">These devices found in your range suring and after the scan</string>
+  <string name="devices_route">Bluetooth Devices</string>
 </resources>
