--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,12 +13,33 @@
   <string name="bluetooth_settings">Bluetooth</string>
   <string name="location_perms_title">Location permission Required</string>
   <string name="location_perms_desc">Bluetooth cannot scan for device if no location permission is granted</string>
-  <string name="start_bluetooth_scan">Start Scan</string>
-  <string name="stop_bluetooth_scan">Stop Scan</string>
+  <string name="start_bluetooth_scan">Scan</string>
+  <string name="stop_bluetooth_scan">Stop</string>
   <string name="paired_device">Paired Devices</string>
   <string name="paired_device_desc">These devices are already paired to this device</string>
   <string name="paired_device_not_found">No paired Devices found</string>
   <string name="available_scan_devices">Available Devices</string>
   <string name="available_scan_devices_desc">These devices found in your range suring and after the scan</string>
   <string name="devices_route">Bluetooth Devices</string>
+  <string name="bt_connection_type_server">Start Server</string>
+  <string name="bt_connection_type_client">Connect As Client</string>
+  <string name="bt_connection_type_server_desc">Starts a Bluetooth server to let other devices to connect</string>
+  <string name="bt_client_route">Bluetooth Client</string>
+  <string name="allow_discover">Allow Discoverability</string>
+  <string name="device_discoverable_success">Device is now discoverable %d seconds</string>
+  <string name="device_discoverable_denied">Device Discoverability denied</string>
+  <string name="close_connection_dialog_title">Close Connection</string>
+  <string name="close_connection_dialog_text">Close the server/client connection between two devices</string>
+  <string name="dialog_action_close">Close</string>
+  <string name="dialog_action_cancel">Cancel</string>
+  <string name="textfield_placeholder">Enter Text to Send</string>
+  <string name="connection_device_found">Device Found</string>
+  <string name="connection_denied">Connection Denied</string>
+  <string name="connection_disconnected">Device Disconnected</string>
+  <string name="connection_device_bonding">Bonding…</string>
+  <string name="connection_bonded">Connection Bonded</string>
+  <string name="connection_init">Connecting to device…</string>
+  <string name="connection_accpted">Device Connected</string>
+  <string name="clear_terminal_tooltip_text">Clear Terminal</string>
+  <string name="devices_image_type">Device Image type %s</string>
 </resources>
