--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
   <string name="bluetooth_permission_not_found_desc">App required bluetooth scan and connect permissions</string>
   <string name="bluetooth_permission_not_found">No Bluetooth Permission</string>
   <string name="bluetooth_not_enable_title">Bluetooth Not Enabled</string>
-  <string name="bluetooth_not_enable_desc">Seems bluetooth is not turned on, bluetooth funtionaly is required please turn it on</string>
+  <string name="bluetooth_not_enable_desc">Seems bluetooth is not turned on, bluetooth functionally is required please turn it on</string>
   <string name="bluetooth_not_enable">Bluetooth Not enabled</string>
   <string name="settings_tooltip_text">Settings</string>
   <string name="permission_settings">Permission Settings</string>
@@ -19,7 +19,7 @@
   <string name="paired_device_desc">These devices are already paired to this device</string>
   <string name="paired_device_not_found">No paired Devices found</string>
   <string name="available_scan_devices">Available Devices</string>
-  <string name="available_scan_devices_desc">These devices found in your range suring and after the scan</string>
+  <string name="available_scan_devices_desc">These devices found in your range string and after the scan</string>
   <string name="devices_route">Bluetooth Devices</string>
   <string name="bt_connection_type_server">Start Server</string>
   <string name="bt_connection_type_client">Connect As Client</string>
@@ -29,7 +29,7 @@
   <string name="device_discoverable_success">Device is now discoverable %d seconds</string>
   <string name="device_discoverable_denied">Device Discoverability denied</string>
   <string name="close_connection_dialog_title">Close Connection</string>
-  <string name="close_connection_dialog_text">Close the server/client connection between two devices</string>
+  <string name="close_connection_dialog_text">Close connection between the clients</string>
   <string name="dialog_action_close">Close</string>
   <string name="dialog_action_cancel">Cancel</string>
   <string name="text_field_placeholder">Enter Text to Send</string>
@@ -44,4 +44,19 @@
   <string name="clear_terminal_tooltip_text">Clear Terminal</string>
   <string name="devices_image_type">Device Image type %s</string>
   <string name="connection_server_listening">Listening for connection…</string>
+  <string name="bt_server_route">Bluetooth Server</string>
+  <!--  Settings receive-->
+  <string name="connect_to_client">Connect</string>
+  <string name="disconnect_from_client">Disconnect</string>
+  <string name="client_connect_to_device">Connect to a device</string>
+  <string name="client_connect_to_server">Connect to Server</string>
+  <string name="dialog_action_connect">Connect</string>
+  <string name="connect_mode_desc">With this app you can connect to a device or connect as a chart client pick your choice</string>
+  <string name="connect_mode_title">Connect Mode</string>
+  <!--  Devices-->
+  <string name="bluetooth_classic">Bluetooth Classic</string>
+  <string name="bluetooth_le">Bluetooth LE</string>
+  <string name="bt_le_device">Bluetooth LE Devices</string>
+  <string name="bt_le_device_desc">Bluetooth low energy devices in your range</string>
+  <string name="location_settings">Location Settings</string>
 </resources>
