Clear off the portions of bluetooth classic Most of the functionalites of the classic bluetooth server and client work is done. AndroidBTServerConnector::startServer in secure connection used listenUsingInSecureRfComm. Added some docs for BluetoothServerConnector. Added UiEventsSideEffect to BTDeviceProfileScreen though none of the ui events is shared from the viewmodel its kept to maintain the integrity of the code. The rest of the changes include Ui based changes and removal of unwanted files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,4 +89,6 @@
   <string name="ble_device_info_title">BLE Device</string>
   <string name="le_charactertics_not_present">No characteristics found with this service</string>
   <string name="ble_device_profile">LE Device Profile</string>
+  <string name="back_arrow">Arrow back</string>
+  <string name="refresh_tooltip_text">Refresh</string>
 </resources>
