Fixed some recomposition problems in settings. As lambdas are not stable by default added remebered lambda's in BLESettingsContent and BTSettingsContent SettingsTypeTabRow tabrow changed to primary one and derieved the state for the selected page aka current page In InformationRoute some of the raw strings are turned to string resources Correct typeo In BTSettingsEvent.OnSendNewLineCharChanged

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -186,4 +186,7 @@
   <string name="topbar_action_restart">Restart</string>
   <string name="topbar_action_refresh">Refresh</string>
   <string name="close_ble_connection_desc">Are you sure you cant to close this bluetooth low energy gatt connection</string>
+  <string name="contacts">Contacts</string>
+  <string name="contracts_with_email">Contact developer with email</string>
+  <string name="mail_title">Email</string>
 </resources>
