modification in UIEventsSideEffect.kt and added SharedElementModifiers.kt CompositionLocalProvider.kt contains the associate locals for animation scope and shared transition layout animations will be added later.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,7 +51,7 @@
   <string name="bt_le_device">Bluetooth LE Devices</string>
   <string name="bt_le_device_desc">Bluetooth low energy devices in your range</string>
   <string name="location_settings">Location Settings</string>
-  <string name="le_available_devices">Available Services</string>
+  <string name="le_available_devices">Services</string>
   <string name="bl_connect_profile_server_uuid_text">Special UUID</string>
   <string name="bl_connect_profile_server_uuid_desc">This UUID can be used to connect to a server started by this app, on other phone</string>
   <string name="bl_connect_profile_server_uuid">Connect to Server</string>
@@ -78,24 +78,24 @@
   <string name="ble_property_extended">Extended Props</string>
   <string name="ble_characteristic_name_unknown">Unknown Characteristic</string>
   <string name="ble_device_info_title">Device</string>
-  <string name="le_charactertics_not_present">No characteristics found with this service</string>
-  <string name="ble_device_profile">LE Device Profile</string>
+  <string name="le_characteristics_not_present">No characteristics found with this service</string>
+  <string name="ble_device_profile">BLE Device Profile</string>
   <string name="back_arrow">Arrow back</string>
   <string name="menu_option_more">Menu Option More</string>
   <string name="ble_descriptor_unknown">Unknown Descriptor</string>
   <string name="dialog_action_send">Send</string>
-  <string name="ble_selected_characteristic">Selected Characteristic</string>
+  <string name="ble_selected_characteristic">Characteristic</string>
   <string name="ble_descriptor_title">Descriptors</string>
   <string name="ble_characteristic_not_selected_title">No Selected Characteristic</string>
-  <string name="ble_characteristic_not_selected_desc">Select an characteristic in order to continue</string>
+  <string name="ble_characteristic_not_selected_desc">Select a characteristic in order to continue</string>
   <string name="write_characteristic_dialog_title">Write Characteristic</string>
   <string name="write_characteristic_dialog_desc">Enter text value in utf-8 to write to.</string>
   <string name="device_rssi_value">Current Device RSSI value</string>
   <string name="bluetooth_device_mac_address">MAC : %s</string>
   <string name="ble_value_hex">Value Hex (0x) : %s</string>
-  <string name="ble_disable_notification">Notfication are dissabled</string>
+  <string name="ble_disable_notification">Notification are disabled</string>
   <string name="ble_enable_indication">Indications are enabled</string>
-  <string name="ble_enable_notification">Notifcations are enabled</string>
+  <string name="ble_enable_notification">Notifications are enabled</string>
   <string name="ble_property_notify_stop">Stop Notify</string>
   <string name="ble_descriptor_readble_value">Value (Readable) : %s</string>
   <string name="ble_property_indicate_stop">Stop Indicate</string>
